@@ -8,11 +8,10 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import io.airbyte.api.model.generated.WebBackendGeographiesListResult;
-import io.airbyte.commons.constants.DataplaneConstantsKt;
 import io.airbyte.commons.constants.OrganizationConstantsKt;
 import io.airbyte.config.DataplaneGroup;
 import io.airbyte.data.services.DataplaneGroupService;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.Assertions;
@@ -33,10 +32,10 @@ class WebBackendGeographiesHandlerTest {
   @Test
   void testListGeographies() {
     final UUID mockOrganizationId = UUID.randomUUID();
-    final List<DataplaneGroup> dataplaneGroups = List.of(new DataplaneGroup().withName("AUTO"));
+    final List<DataplaneGroup> dataplaneGroups = List.of(new DataplaneGroup().withName("test"));
 
     final WebBackendGeographiesListResult expected = new WebBackendGeographiesListResult().geographies(
-        List.of(DataplaneConstantsKt.GEOGRAPHY_AUTO));
+        List.of("test"));
 
     when(dataplaneGroupService.listDataplaneGroups(
         List.of(OrganizationConstantsKt.getDEFAULT_ORGANIZATION_ID(), mockOrganizationId), false))
@@ -51,19 +50,14 @@ class WebBackendGeographiesHandlerTest {
   void testGetDataplaneGroupNames_combinesAndDeduplicates() {
     final UUID orgId = UUID.randomUUID();
 
-    final List<DataplaneGroup> defaultGroups = List.of(
+    final List<DataplaneGroup> dataplaneGroups = List.of(
         new DataplaneGroup().withName("US"),
-        new DataplaneGroup().withName("EU"));
-    final List<DataplaneGroup> orgGroups = List.of(
         new DataplaneGroup().withName("EU"),
         new DataplaneGroup().withName("AUS"));
 
-    final List<DataplaneGroup> combinedGroups = new ArrayList<>();
-    combinedGroups.addAll(defaultGroups);
-    combinedGroups.addAll(orgGroups);
-
     when(dataplaneGroupService.listDataplaneGroups(
-        List.of(OrganizationConstantsKt.getDEFAULT_ORGANIZATION_ID(), orgId), false)).thenReturn(combinedGroups);
+        Arrays.asList(OrganizationConstantsKt.getDEFAULT_ORGANIZATION_ID(), orgId), false))
+            .thenReturn(dataplaneGroups);
 
     List<String> result = webBackendGeographiesHandler.getDataplaneGroupNames(orgId);
 
